# recipe-book

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  run.sh
.github/workflows/: ci.yml
recipe_book/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: forms.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/static/recipes/css/: styles.css
recipes/templates/recipes/: base.html  recipe_confirm_delete.html  recipe_detail.html  recipe_form.html  recipe_list.html
