
[project]
name = "recipe_book"
version = "0.1.0"
description = "A Django based application for creating and managing recipes in a virtual recipe book."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django<5.0,>=4.2",
    "mypy>=1.18.2",
    "ruff>=0.14.2",
    "bandit>=1.8.6",
    "pytest>=8.4.2",
    "django-stubs>=5.2.7",
]

[build-system]
requires = [ "pdm-backend",]
build-backend = "pdm.backend"

[dependency-groups]
lint = [ "ruff>=0.1.0"]
dev = [
    "pytest>=8.0.0",
    "bandit>=1.8.6",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]

dev = "python manage.py runserver"
# Run Django management commands
shell = "python manage.py shell"
makemigrations = "python manage.py makemigrations"
migrate = "python manage.py migrate"
createsuperuser = "python manage.py createsuperuser"
test = "pytest"
lint = "ruff check recipes/ --fix"
lint-check = "ruff check recipes/"
format = "ruff format recipes/ tests/"
format-check = "ruff format --check recipes/ tests/"
typecheck = "mypy recipes/"
security = "bandit -c pyproject.toml -r recipes/"


[tool.ruff.lint]
select = [ "E", "F", "I", "N", "UP", "B", "C4", "SIM",]
ignore = [ "E501", "N802", "N803",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py", "*_test.py",]
addopts = ""

[tool.bandit]
targets = ["recipes"]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "build",
    "dist",
    ".tox",
    ".pytest_cache",
    "__pycache__",
]
skips = ["B101"]  # assert_used - OK in tests
severity_level = "medium"
confidence_level = "medium"

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
# Industry-standard strict type checking (enabled for production code)
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unreachable = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
# Additional strict checks
disallow_untyped_calls = true
no_implicit_reexport = true
strict_equality = true
strict_concatenate = true

[tool.django-stubs]
django_settings_module = "recipe_book.settings"

[[tool.mypy.overrides]]
module = "solutions.*"
# Very relaxed rules for LeetCode solutions (learning/practice code)
# Focus only on critical errors (undefined names, syntax issues)
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
allow_untyped_globals = true
allow_redefinition = true